@@ -9,7 +9,8 @@
 
 	* configure.in: bump minimum GTK+ to 2.24
 
-	* lisp/sawfish/gtk/widget.jl: port 'choice widget to GtkComboBoxText
+	* lisp/sawfish/gtk/widget.jl: port 'choice and 'symbol widgets to GtkComboBoxText
+
 
 2011-05-31  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/ext/mousetrap.jl: added mousetrapping feature,
